WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
268664
[WebGPU] RemotePresentationContext::getCurrentTexture does not handle when getCurrentTexture() returns nullptr
https://bugs.webkit.org/show_bug.cgi?id=268664
Summary
[WebGPU] RemotePresentationContext::getCurrentTexture does not handle when ge...
Mike Wyrzykowski
Reported
2024-02-02 15:14:00 PST
[WebGPU] RemotePresentationContext::getCurrentTexture does not handle when getCurrentTexture() returns nullptr
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-02-02 15:14:15 PST
radar://122173189
Mike Wyrzykowski
Comment 2
2024-02-02 15:33:20 PST
Pull request:
https://github.com/WebKit/WebKit/pull/23784
EWS
Comment 3
2024-02-07 11:36:48 PST
Committed
274231@main
(8c986e80a9f1): <
https://commits.webkit.org/274231@main
> Reviewed commits have been landed. Closing PR #23784 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug