[WebGPU] RemotePresentationContext::getCurrentTexture does not handle when getCurrentTexture() returns nullptr https://bugs.webkit.org/show_bug.cgi?id=268664 <radar://122173189>

Reviewed by Tadeu Zagallo.

If getCurrentTexture return null, we shouldn't dereference it.

* Source/WebKit/GPUProcess/graphics/WebGPU/RemotePresentationContext.cpp:
(WebKit::RemotePresentationContext::getCurrentTexture):

Canonical link: https://commits.webkit.org/274231@main