Source/WebKit/GPUProcess/graphics/WebGPU/RemotePresentationContext.cpp
@@ -72,6 +72,9 @@ void RemotePresentationContext::unconfigure()
 void RemotePresentationContext::getCurrentTexture(WebGPUIdentifier identifier)
 {
     auto texture = m_backing->getCurrentTexture();
+    if (!texture)
+        return;
+
     // We're creating a new resource here, because we don't want the GetCurrentTexture message to be sync.
     // If the message is async, then the WebGPUIdentifier goes from the Web process to the GPU Process, which
     // means the Web Process is going to proceed and interact with the texture as-if it has this identifier.
@@ -80,7 +83,6 @@ void RemotePresentationContext::getCurrentTexture(WebGPUIdentifier identifier)
     // but for now let's just create a new RemoteTexture object with the expected identifier, just for simplicity.
     // The Web Process should already be caching these current textures internally, so it's unlikely that we'll
     // actually run into a problem here.
-    // FIXME: Handle the situation where texture is nullptr.
     auto remoteTexture = RemoteTexture::create(*texture, m_objectHeap, m_streamConnection.copyRef(), identifier);
     m_objectHeap.addObject(identifier, remoteTexture);
 }
